# scalable-rqa-volatility

./: .gitignore  README.md  comparison.txt  pyproject.toml  reproducibility.ipynb
configs/: dataset2.yaml  dataset3.yaml
data/processed/: dataset1_summary.csv  dataset1_test.parquet  dataset1_train.parquet  dataset1_val.parquet  dataset2_summary.csv  dataset2_test.parquet  dataset2_train.parquet  dataset2_val.parquet
data/raw/: Core_TimeSeries.csv  S&P 500 Macro-Financial Volatility Dataset.csv
results/: benchmark_scalable_rqa.txt  checkpoint_aggregation_d3.txt  classify_rqa_samp_d3.txt  feature_importance_beta_sweep_d3.txt  feature_importance_d3.txt  predictions_d1.npz  predictions_d2.npz  statistical_tests_d1.txt  statistical_tests_d2.txt  statistical_tests_d3.txt  walk_forward_cv_d3.txt
scripts/: plot_all_models.py  plot_dataset.py  plot_model.py  run_all_experiments_d3.ps1  run_extended_sweeps_d2.ps1  run_extended_sweeps_d3.ps1  run_pipeline.py  run_pipeline_dataset2.py  run_pipeline_dataset3.py  run_statistical_tests.py  train_beta_features_baselines.py  train_beta_features_baselines_d3.py  train_features_baselines.py  train_features_baselines_d3.py  train_ginn.py  train_ginn_d3.py  train_gjr_garch.py  train_gjr_garch_d3.py  train_har.py  train_har_d3.py  train_lstm.py  train_lstm_d3.py  visualize_dataset1_processing.py
scripts/data/: download_yahoo_sp500_intraday.py  run_pipeline.py  run_pipeline_dataset2.py  run_pipeline_dataset3.py
scripts/evaluate/: benchmark_scalable_rqa.py  checkpoint_aggregation_and_timescales.py  classify_with_rqa_samp_d3.py  (+4 more)
(+38 files in other folders)
